# mtdata

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  scheduled.yml
data/: README.md  air_quality.json  air_quality.lines.json  missoula_911.json  missoula_911.lines.json  mt_covid_counts.lines.json
docs/: conf.py  development.rst  index.rst  modules.rst  mtdata.datasets.rst  mtdata.rst
mtdata/: __init__.py  __main__.py  _version.py  backward.py  dataset.py  fields.py  manifest.py  parameters.py  registry.py  retry.py  row.py  storage.py  transformer.py
mtdata/datasets/: __init__.py  air_quality.py  missoula_911.py  mt_covid_counts.py
tests/: test_retry.py  test_storage.py
tool/: build-container.sh  check-all.sh  check-format.sh  check-lints.sh  check-tests.sh  check-types.sh  push-container.sh  run-container.sh  run-format.sh  update-deps.sh  update-docs.sh
